core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/aggregate.yf
---
name: aggregate-self
graphs:
  start:
    - {type: Echo, put: listi, value: []}
    - type: AggregateList
      aggregate: "firstelement"
      aggregateList: "{listi}"
      put: "list"

    - type: AggregateList
      aggregate: "{{list}}[0]"
      aggregateList: "{list}"
      put: "list2"

