core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/aggregate2.yf
---
name: aggregate-self
graphs:
  start:
    - {type: Echo, put: listi, value: []}
    - type: AggregateList
      aggregate: "firstelement"
      aggregateList: "{listi}"
      put: "list"

    - type: AggregateList
      aggregate: {hello: world}
      aggregateList: "{list}"
      put: "list2"


